helm/logging/bliblimart-backend/03-service.yaml
# Source: bliblimart-backend/templates/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bliblimart-backend
  namespace: bliblimart-backend
spec:
  selector:
    app: bliblimart-backend
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
